load api key from botcfg.cfg instead

--- a/botcfg.cfg
+++ b/botcfg.cfg
@@ -3,4 +3,5 @@ botnick = twitch/jtv account for the bot
 password = password
 streamname = name of stream
 lastfmuser = last.fm username for !song
+lastfmapikey = last.fm api key
 owner = ["chat mods/admins here as an array"]
