made last.fm on call instead of threaded

--- a/botcfg.cfg
+++ b/botcfg.cfg
@@ -4,4 +4,4 @@ password = password
 streamname = name of stream
 lastfmuser = last.fm username for !song
 lastfmapikey = last.fm api key
-owner = ["chat mods/admins here as an array"]
+owner = bot admins comma separated
